Styled the project with CSS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,63 @@
-body {
-  background-color: whitesmoke;
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background: #e3e8ff;
+  padding: 30px;
+  box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
 }
+
+.city {
+  display: flex;
+  margin: 10px 0;
+  justify-content: space-between;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.09);
+}
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 44px;
+  font-weight: bold;
+  white-space: nowrap;
+}
+
+.time small {
+  font-size: 14px;
+  vertical-align: middle;
+}
+
+body {
+  background-color: #cab5dd;
+  font-family: sans-serif;
+}
+h1 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 40px;
+}
+
+h2 {
+  margin: 0 0 10px;
+  font-size: 28px;
+}
+
+select {
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 10px;
+}
+
 footer {
   text-align: center;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.8);
 }
