--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,9 @@ select {
   border-radius: 4px;
   padding: 10px;
 }
-
+a {
+  text-decoration: none;
+}
 footer {
   text-align: center;
   font-size: 18px;
